# prometheus

./: .gitignore  .golangci.yml  .gs-project.yml  Makefile  README.bazel  WORKSPACE  WORKSPACE.local  deps.bzl  go.mod  go.sum
cmd/prometheus/: BUILD.bazel
cmd/promtool/: BUILD.bazel
config/: BUILD.bazel  config.go
discovery/: BUILD.bazel
discovery/aws/: BUILD.bazel
discovery/azure/: BUILD.bazel
discovery/config/: BUILD.bazel  config.go
discovery/consul/: BUILD.bazel
discovery/digitalocean/: BUILD.bazel
discovery/dns/: BUILD.bazel
discovery/eureka/: BUILD.bazel
discovery/file/: BUILD.bazel
discovery/gce/: BUILD.bazel
discovery/hetzner/: BUILD.bazel
discovery/http/: BUILD.bazel
discovery/install/: BUILD.bazel
discovery/ionos/: BUILD.bazel
discovery/kubernetes/: BUILD.bazel
discovery/legacymanager/: BUILD.bazel
discovery/linode/: BUILD.bazel
discovery/marathon/: BUILD.bazel
discovery/moby/: BUILD.bazel
discovery/nomad/: BUILD.bazel
discovery/openstack/: BUILD.bazel
discovery/ovhcloud/: BUILD.bazel
discovery/puppetdb/: BUILD.bazel
discovery/refresh/: BUILD.bazel
discovery/scaleway/: BUILD.bazel
discovery/triton/: BUILD.bazel
discovery/uyuni/: BUILD.bazel
discovery/vultr/: BUILD.bazel
discovery/xds/: BUILD.bazel
discovery/zookeeper/: BUILD.bazel
documentation/examples/custom-sd/adapter/: BUILD.bazel
documentation/examples/custom-sd/adapter-usage/: BUILD.bazel
documentation/examples/remote_storage/example_write_adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/influxdb/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/opentsdb/: BUILD.bazel
model/histogram/: BUILD.bazel
model/labels/: BUILD.bazel  labels.go  labels_common.go  labels_stringlabels.go
model/metadata/: BUILD.bazel
model/relabel/: BUILD.bazel
model/rulefmt/: BUILD.bazel  rulefmt.go
model/textparse/: BUILD.bazel
notifier/: BUILD.bazel  notifier.go  notifier_test.go
pkg/examplar/: BUILD.bazel  exemplar.go
pkg/gate/: BUILD.bazel  gate.go
pkg/labels/: BUILD.bazel  labels.go  labels_test.go  matcher.go  matcher_test.go  regexp.go  regexp_test.go  test_utils.go
pkg/logging/: BUILD.bazel  dedupe.go  dedupe_test.go  file.go  file_test.go  ratelimit.go
pkg/pool/: BUILD.bazel  pool.go  pool_test.go
pkg/relabel/: BUILD.bazel  relabel.go  relabel_test.go
pkg/rulefmt/: BUILD.bazel  rulefmt.go  rulefmt_test.go  testdata
pkg/runtime/: BUILD.bazel  limits_default.go  limits_windows.go  statfs.go  statfs_default.go  statfs_linux_386.go  statfs_uint32.go  uname_default.go  uname_linux.go  vmlimits_default.go  vmlimits_openbsd.go
pkg/textparse/: BUILD.bazel  README.md  interface.go  interface_test.go  openmetricslex.l  openmetricslex.l.go  openmetricsparse.go  openmetricsparse_test.go  promlex.l  promlex.l.go  promparse.go  promparse_test.go  promtestdata.nometa.txt  promtestdata.txt
pkg/timestamp/: BUILD.bazel  timestamp.go
pkg/value/: BUILD.bazel  value.go
plugins/: BUILD.bazel
prompb/: BUILD.bazel
prompb/io/prometheus/client/: BUILD.bazel
prompb/io/prometheus/write/v2/: BUILD.bazel
prompb/rwcommon/: BUILD.bazel
promql/: BUILD.bazel  engine.go  functions.go  value.go
promql/parser/: BUILD.bazel  functions.go
promql/parser/posrange/: BUILD.bazel
promql/promqltest/: BUILD.bazel
rules/: BUILD.bazel  group.go  manager.go
scrape/: BUILD.bazel  scrape.go
storage/: BUILD.bazel
storage/remote/: BUILD.bazel  codec.go
storage/remote/azuread/: BUILD.bazel
storage/remote/googleiam/: BUILD.bazel
storage/remote/otlptranslator/prometheus/: BUILD.bazel
storage/remote/otlptranslator/prometheusremotewrite/: BUILD.bazel
template/: BUILD.bazel  epoch.go  template.go
tracing/: BUILD.bazel
tsdb/: BUILD.bazel  block.go  db.go  head_read.go  ooo_head_read.go  querier.go
tsdb/agent/: BUILD.bazel
tsdb/chunkenc/: BUILD.bazel
tsdb/chunks/: BUILD.bazel
tsdb/encoding/: BUILD.bazel
tsdb/errors/: errors.go
tsdb/fileutil/: BUILD.bazel
tsdb/index/: BUILD.bazel  index.go
tsdb/record/: BUILD.bazel
tsdb/tombstones/: BUILD.bazel
tsdb/tsdbutil/: BUILD.bazel
tsdb/wlog/: BUILD.bazel  checkpoint.go  watcher.go
util/almost/: BUILD.bazel
util/annotations/: BUILD.bazel
util/documentcli/: BUILD.bazel
util/fmtutil/: BUILD.bazel
util/httputil/: BUILD.bazel
util/jsonutil/: BUILD.bazel
util/junitxml/: BUILD.bazel
util/logging/: BUILD.bazel
util/netconnlimit/: BUILD.bazel
util/runutil/: BUILD.bazel
util/stats/: BUILD.bazel
util/testutil/: BUILD.bazel
util/treecache/: BUILD.bazel
util/zeropool/: BUILD.bazel
web/: BUILD.bazel  federate.go
web/api/v1/: BUILD.bazel  api.go
web/ui/: BUILD.bazel  assets_embed.go  embed.go  ui.go
web/ui/react-app/src/pages/graph/: PanelList.tsx
web/ui/static/react/: asset-manifest.json  index.html
web/ui/static/react/static/js/: main.4a172396.js  main.5a634cb1.js  main.9ee6de05.js  main.e4962b75.js  main.e4962b75.js.LICENSE.txt
