load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "prompb",
    srcs = [
        "codec.go",
        "custom.go",
        "remote.pb.go",
        "types.pb.go",
    ],
    importpath = "github.com/prometheus/prometheus/prompb",
    visibility = ["//visibility:public"],
    deps = [
        "//model/exemplar",
        "//model/histogram",
        "//model/labels",
        "@com_github_gogo_protobuf//gogoproto",
        "@com_github_gogo_protobuf//proto",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":prompb",
    visibility = ["//visibility:public"],
)
