load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "promql",
    srcs = [
        "engine.go",
        "functions.go",
        "quantile.go",
        "query_logger.go",
        "test.go",
        "value.go",
    ],
    embedsrcs = [
        "testdata/aggregators.test",
        "testdata/at_modifier.test",
        "testdata/collision.test",
        "testdata/functions.test",
        "testdata/histograms.test",
        "testdata/literals.test",
        "testdata/native_histograms.test",
        "testdata/operators.test",
        "testdata/selectors.test",
        "testdata/staleness.test",
        "testdata/subquery.test",
        "testdata/trig_functions.test",
    ],
    importpath = "github.com/prometheus/prometheus/promql",
    visibility = ["//visibility:public"],
    deps = [
        "//model/exemplar",
        "//model/histogram",
        "//model/labels",
        "//model/timestamp",
        "//model/value",
        "//promql/parser",
        "//promql/parser/posrange",
        "//storage",
        "//tsdb/chunkenc",
        "//util/annotations",
        "//util/stats",
        "//util/teststorage",
        "//util/testutil",
        "//util/zeropool",
        "@com_github_edsrzf_mmap_go//:mmap-go",
        "@com_github_facette_natsort//:natsort",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

alias(
    name = "go_default_library",
    actual = ":promql",
    visibility = ["//visibility:public"],
)

go_test(
    name = "promql_test",
    srcs = [
        "bench_test.go",
        "engine_test.go",
        "functions_test.go",
        "promql_test.go",
        "quantile_test.go",
        "query_logger_test.go",
        "test_test.go",
        "value_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":promql"],
    deps = [
        "//model/histogram",
        "//model/labels",
        "//model/timestamp",
        "//promql/parser",
        "//promql/parser/posrange",
        "//storage",
        "//tsdb/chunkenc",
        "//tsdb/tsdbutil",
        "//util/annotations",
        "//util/stats",
        "//util/teststorage",
        "//util/testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_goleak//:goleak",
    ],
)
