load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rules",
    srcs = [
        "alerting.go",
        "group.go",
        "manager.go",
        "origin.go",
        "recording.go",
        "rule.go",
    ],
    importpath = "github.com/prometheus/prometheus/rules",
    visibility = ["//visibility:public"],
    deps = [
        "//model/labels",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//notifier",
        "//promql",
        "//promql/parser",
        "//storage",
        "//template",
        "//tsdb/chunkenc",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@org_golang_x_sync//semaphore",
        "@org_uber_go_atomic//:atomic",
    ],
)

alias(
    name = "go_default_library",
    actual = ":rules",
    visibility = ["//visibility:public"],
)

go_test(
    name = "rules_test",
    srcs = [
        "alerting_test.go",
        "group_test.go",
        "manager_test.go",
        "origin_test.go",
        "recording_test.go",
    ],
    embed = [":rules"],
    deps = [
        "//model/histogram",
        "//model/labels",
        "//model/relabel",
        "//model/rulefmt",
        "//model/timestamp",
        "//model/value",
        "//notifier",
        "//promql",
        "//promql/parser",
        "//promql/promqltest",
        "//storage",
        "//tsdb/chunkenc",
        "//tsdb/tsdbutil",
        "//util/teststorage",
        "//util/testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_atomic//:atomic",
    ],
)
