load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tsdb",
    srcs = [
        "block.go",
        "blockwriter.go",
        "compact.go",
        "db.go",
        "exemplar.go",
        "head.go",
        "head_append.go",
        "head_read.go",
        "head_wal.go",
        "isolation.go",
        "ooo_head.go",
        "ooo_head_read.go",
        "ooo_isolation.go",
        "querier.go",
        "repair.go",
        "tsdbblockutil.go",
        "wal.go",
    ],
    importpath = "github.com/prometheus/prometheus/tsdb",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//model/exemplar",
        "//model/histogram",
        "//model/labels",
        "//model/metadata",
        "//model/timestamp",
        "//model/value",
        "//storage",
        "//tsdb/chunkenc",
        "//tsdb/chunks",
        "//tsdb/encoding",
        "//tsdb/errors",
        "//tsdb/fileutil",
        "//tsdb/goversion",
        "//tsdb/index",
        "//tsdb/record",
        "//tsdb/tombstones",
        "//tsdb/tsdbutil",
        "//tsdb/wlog",
        "//util/annotations",
        "//util/zeropool",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tsdb",
    visibility = ["//visibility:public"],
)

go_test(
    name = "tsdb_test",
    srcs = [
        "block_test.go",
        "blockwriter_test.go",
        "compact_test.go",
        "db_test.go",
        "example_test.go",
        "exemplar_test.go",
        "head_bench_test.go",
        "head_read_test.go",
        "head_test.go",
        "isolation_test.go",
        "mocks_test.go",
        "ooo_head_read_test.go",
        "ooo_head_test.go",
        "ooo_isolation_test.go",
        "querier_bench_test.go",
        "querier_test.go",
        "repair_test.go",
        "wal_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":tsdb"],
    deps = [
        "//config",
        "//model/exemplar",
        "//model/histogram",
        "//model/labels",
        "//model/metadata",
        "//model/value",
        "//storage",
        "//tsdb/chunkenc",
        "//tsdb/chunks",
        "//tsdb/fileutil",
        "//tsdb/index",
        "//tsdb/record",
        "//tsdb/tombstones",
        "//tsdb/tsdbutil",
        "//tsdb/wlog",
        "//util/annotations",
        "//util/testutil",
        "@com_github_go_kit_log//:log",
        "@com_github_google_go_cmp//cmp",
        "@com_github_oklog_ulid//:ulid",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_atomic//:atomic",
        "@org_uber_go_goleak//:goleak",
    ],
)
