load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ionos",
    srcs = [
        "ionos.go",
        "metrics.go",
        "server.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/ionos",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "//util/strutil",
        "@com_github_go_kit_log//:log",
        "@com_github_ionos_cloud_sdk_go_v6//:sdk-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
    ],
)

alias(
    name = "go_default_library",
    actual = ":ionos",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ionos_test",
    srcs = ["server_test.go"],
    data = glob(["testdata/**"]),
    embed = [":ionos"],
    deps = [
        "@com_github_ionos_cloud_sdk_go_v6//:sdk-go",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
