load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nomad",
    srcs = [
        "metrics.go",
        "nomad.go",
    ],
    importpath = "github.com/prometheus/prometheus/discovery/nomad",
    visibility = ["//visibility:public"],
    deps = [
        "//discovery",
        "//discovery/refresh",
        "//discovery/targetgroup",
        "@com_github_go_kit_log//:log",
        "@com_github_hashicorp_nomad_api//:api",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":nomad",
    visibility = ["//visibility:public"],
)

go_test(
    name = "nomad_test",
    srcs = ["nomad_test.go"],
    embed = [":nomad"],
    deps = [
        "//discovery",
        "@com_github_go_kit_log//:log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)
