load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "histogram",
    srcs = [
        "float_histogram.go",
        "generic.go",
        "histogram.go",
        "test_utils.go",
    ],
    importpath = "github.com/prometheus/prometheus/model/histogram",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//slices"],
)

alias(
    name = "go_default_library",
    actual = ":histogram",
    visibility = ["//visibility:public"],
)

go_test(
    name = "histogram_test",
    srcs = [
        "float_histogram_test.go",
        "generic_test.go",
        "histogram_test.go",
    ],
    embed = [":histogram"],
    deps = [
        "//model/value",
        "@com_github_stretchr_testify//require",
        "@org_golang_x_exp//slices",
    ],
)
