load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "labels",
    srcs = [
        "labels.go",
        "labels_common.go",
        "matcher.go",
        "regexp.go",
        "sharding.go",
        "test_utils.go",
    ],
    importpath = "github.com/prometheus/prometheus/model/labels",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cespare_xxhash_v2//:xxhash",
        "@com_github_grafana_regexp//:regexp",
        "@com_github_grafana_regexp//syntax",
        "@com_github_prometheus_common//model",
        "@org_golang_x_text//unicode/norm",
    ],
)

alias(
    name = "go_default_library",
    actual = ":labels",
    visibility = ["//visibility:public"],
)

go_test(
    name = "labels_test",
    srcs = [
        "labels_test.go",
        "matcher_test.go",
        "regexp_test.go",
        "sharding_test.go",
    ],
    embed = [":labels"],
    deps = [
        "@com_github_grafana_regexp//:regexp",
        "@com_github_grafana_regexp//syntax",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
