load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "examplar",
    srcs = ["exemplar.go"],
    importpath = "github.com/prometheus/prometheus/pkg/examplar",
    visibility = ["//visibility:public"],
    deps = ["//model/labels"],
)

alias(
    name = "go_default_library",
    actual = ":examplar",
    visibility = ["//visibility:public"],
)
