load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "annotations",
    srcs = ["annotations.go"],
    importpath = "github.com/prometheus/prometheus/util/annotations",
    visibility = ["//visibility:public"],
    deps = [
        "//promql/parser/posrange",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":annotations",
    visibility = ["//visibility:public"],
)
