load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "fmtutil",
    srcs = ["format.go"],
    importpath = "github.com/prometheus/prometheus/util/fmtutil",
    visibility = ["//visibility:public"],
    deps = [
        "//prompb",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":fmtutil",
    visibility = ["//visibility:public"],
)

go_test(
    name = "fmtutil_test",
    srcs = ["format_test.go"],
    embed = [":fmtutil"],
    deps = [
        "//prompb",
        "@com_github_stretchr_testify//require",
    ],
)
