load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "runutil",
    srcs = ["runutil.go"],
    importpath = "github.com/prometheus/prometheus/util/runutil",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":runutil",
    visibility = ["//visibility:public"],
)
