load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "zeropool",
    srcs = ["pool.go"],
    importpath = "github.com/prometheus/prometheus/util/zeropool",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":zeropool",
    visibility = ["//visibility:public"],
)

go_test(
    name = "zeropool_test",
    srcs = ["pool_test.go"],
    deps = [
        ":zeropool",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_atomic//:atomic",
    ],
)
